Pushdown earliest/latest aggregate functions (#4166)
* Pushdown earliest/latest aggregate functions

Signed-off-by: Tomoyuki Morita <moritato@amazon.com>

* Fix spark sql

Signed-off-by: Tomoyuki Morita <moritato@amazon.com>

---------

Signed-off-by: Tomoyuki Morita <moritato@amazon.com>