@@ -69,6 +69,7 @@ import org.opensearch.sql.calcite.utils.OpenSearchTypeFactory;
 import org.opensearch.sql.data.type.ExprType;
 import org.opensearch.sql.expression.function.BuiltinFunctionName;
 import org.opensearch.sql.opensearch.request.PredicateAnalyzer.NamedFieldExpression;
+import org.opensearch.sql.opensearch.response.agg.ArgMaxMinParser;
 import org.opensearch.sql.opensearch.response.agg.CompositeAggregationParser;
 import org.opensearch.sql.opensearch.response.agg.MetricParser;
 import org.opensearch.sql.opensearch.response.agg.NoBucketAggregationParser;
@@ -267,45 +268,54 @@ public class AggregateAnalyzer {
       String aggFieldName,
       AggregateBuilderHelper helper) {
 
-    switch (aggCall.getAggregation().kind) {
-      case AVG:
-        return Pair.of(
-            helper.build(args.get(0), AggregationBuilders.avg(aggFieldName)),
-            new SingleValueParser(aggFieldName));
-      case SUM:
-        return Pair.of(
-            helper.build(args.get(0), AggregationBuilders.sum(aggFieldName)),
-            new SingleValueParser(aggFieldName));
-      case COUNT:
-        return Pair.of(
-            helper.build(
-                !args.isEmpty() ? args.get(0) : null, AggregationBuilders.count(aggFieldName)),
-            new SingleValueParser(aggFieldName));
-      case MIN:
-        return Pair.of(
-            helper.build(args.get(0), AggregationBuilders.min(aggFieldName)),
-            new SingleValueParser(aggFieldName));
-      case MAX:
-        return Pair.of(
-            helper.build(args.get(0), AggregationBuilders.max(aggFieldName)),
-            new SingleValueParser(aggFieldName));
-      case VAR_SAMP:
-        return Pair.of(
-            helper.build(args.get(0), AggregationBuilders.extendedStats(aggFieldName)),
-            new StatsParser(ExtendedStats::getVarianceSampling, aggFieldName));
-      case VAR_POP:
-        return Pair.of(
-            helper.build(args.get(0), AggregationBuilders.extendedStats(aggFieldName)),
-            new StatsParser(ExtendedStats::getVariancePopulation, aggFieldName));
-      case STDDEV_SAMP:
-        return Pair.of(
-            helper.build(args.get(0), AggregationBuilders.extendedStats(aggFieldName)),
-            new StatsParser(ExtendedStats::getStdDeviationSampling, aggFieldName));
-      case STDDEV_POP:
-        return Pair.of(
-            helper.build(args.get(0), AggregationBuilders.extendedStats(aggFieldName)),
-            new StatsParser(ExtendedStats::getStdDeviationPopulation, aggFieldName));
-      case OTHER_FUNCTION:
+    return switch (aggCall.getAggregation().kind) {
+      case AVG -> Pair.of(
+          helper.build(args.getFirst(), AggregationBuilders.avg(aggFieldName)),
+          new SingleValueParser(aggFieldName));
+      case SUM -> Pair.of(
+          helper.build(args.getFirst(), AggregationBuilders.sum(aggFieldName)),
+          new SingleValueParser(aggFieldName));
+      case COUNT -> Pair.of(
+          helper.build(
+              !args.isEmpty() ? args.getFirst() : null, AggregationBuilders.count(aggFieldName)),
+          new SingleValueParser(aggFieldName));
+      case MIN -> Pair.of(
+          helper.build(args.getFirst(), AggregationBuilders.min(aggFieldName)),
+          new SingleValueParser(aggFieldName));
+      case MAX -> Pair.of(
+          helper.build(args.getFirst(), AggregationBuilders.max(aggFieldName)),
+          new SingleValueParser(aggFieldName));
+      case VAR_SAMP -> Pair.of(
+          helper.build(args.getFirst(), AggregationBuilders.extendedStats(aggFieldName)),
+          new StatsParser(ExtendedStats::getVarianceSampling, aggFieldName));
+      case VAR_POP -> Pair.of(
+          helper.build(args.getFirst(), AggregationBuilders.extendedStats(aggFieldName)),
+          new StatsParser(ExtendedStats::getVariancePopulation, aggFieldName));
+      case STDDEV_SAMP -> Pair.of(
+          helper.build(args.getFirst(), AggregationBuilders.extendedStats(aggFieldName)),
+          new StatsParser(ExtendedStats::getStdDeviationSampling, aggFieldName));
+      case STDDEV_POP -> Pair.of(
+          helper.build(args.getFirst(), AggregationBuilders.extendedStats(aggFieldName)),
+          new StatsParser(ExtendedStats::getStdDeviationPopulation, aggFieldName));
+      case ARG_MAX -> Pair.of(
+          AggregationBuilders.topHits(aggFieldName)
+              .fetchSource(helper.inferNamedField(args.getFirst()).getRootName(), null)
+              .size(1)
+              .from(0)
+              .sort(
+                  helper.inferNamedField(args.get(1)).getRootName(),
+                  org.opensearch.search.sort.SortOrder.DESC),
+          new ArgMaxMinParser(aggFieldName));
+      case ARG_MIN -> Pair.of(
+          AggregationBuilders.topHits(aggFieldName)
+              .fetchSource(helper.inferNamedField(args.getFirst()).getRootName(), null)
+              .size(1)
+              .from(0)
+              .sort(
+                  helper.inferNamedField(args.get(1)).getRootName(),
+                  org.opensearch.search.sort.SortOrder.ASC),
+          new ArgMaxMinParser(aggFieldName));
+      case OTHER_FUNCTION -> {
         BuiltinFunctionName functionName =
             BuiltinFunctionName.ofAggregation(aggCall.getAggregation().getName()).get();
         switch (functionName) {
